# Abhiyaan

./: CMakeLists.txt  dbscan_cuda.cu  dbscan_cuda.cuh  lane_follower.cpp  nav2_params.yaml
gazebo/gazebo_ws/: map.pgm  map.yaml  map_1717122599.pgm  map_new.yaml
gazebo/gazebo_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
gazebo/gazebo_ws/install/model_pkg/share/model_pkg/: local_setup.sh  package.bash  package.dsv  package.sh
gazebo/gazebo_ws/install/model_pkg/share/model_pkg/cmake/: model_pkgConfig.cmake
gazebo/gazebo_ws/install/model_pkg/share/model_pkg/model/: robot.xacro  robot_bak.xacro
gazebo/gazebo_ws/install/model_pkg/share/model_pkg/rviz/: rviz_basic_settings.rviz
gazebo/gazebo_ws/log/: latest_build
gazebo/gazebo_ws/src/model_pkg/: CMakeLists.txt  package.xml
gazebo/gazebo_ws/src/model_pkg/launch/: model_launch.py
gazebo/gazebo_ws/src/model_pkg/rviz/: rviz_basic_settings.rviz
gazebo_ws/: map_1717122599.yaml
gazebo_ws/install/: setup.sh
gazebo_ws/install/model_pkg/share/model_pkg/: package.ps1  package.xml  package.zsh
gazebo_ws/install/model_pkg/share/model_pkg/config/: nav2_params.yaml
gazebo_ws/install/model_pkg/share/model_pkg/rviz/: rviz_basic_settings.rviz
gazebo_ws/log/: latest_build  latest_list
gazebo_ws/src/model_pkg/: CMakeLists.txt
gazebo_ws/src/model_pkg/launch/: model_launch.py
gazebo_ws/src/model_pkg/model/: world.world
lanes_ros2/: CMakeLists.txt
lanes_ros2/launch/: lanes.launch.py
lanes_ros2/launch/.ipynb_checkpoints/: lanes.launch-checkpoint.py
lanes_ros2/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lanes_ros2/scripts/: camera_geometry.py  lanes_dilation.py  lanes_ipm.py
lanes_ros2/src/: intensity.py  ipm.cu
lanes_ros2/src/backup/: ipm.bak
new_lane_follower/: CMakeLists.txt  package.xml
new_lane_follower/src/: binary_thresholding.py  go.py  go_new.py  hsv.py  hsv_thresholding.py  intensity.py  ipm.cu  ipm_single.cu  lane_detector_with_rapids.py  lane_follower.cpp  lane_follower.cu.bak2  lane_follower_2.cpp  lane_follower_backup.cu  multi-otsu.py  one_lane_follower.cpp  robot_navigator.py
